[gd_scene load_steps=6 format=3 uid="uid://1npejj82gb3u"]

[ext_resource type="Script" uid="uid://dla8bym7ptgka" path="res://scenes/npc.gd" id="1_abqhh"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_nnsk1"]
radius = 0.25
height = 1.0

[sub_resource type="CapsuleMesh" id="CapsuleMesh_rwgxs"]
radius = 0.075
height = 0.15

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_nnsk1"]
height = 1.0

[sub_resource type="CylinderShape3D" id="CylinderShape3D_abqhh"]
height = 1.0
radius = 2.0

[node name="Npc" type="AnimatableBody3D"]
collision_layer = 8
collision_mask = 4
script = ExtResource("1_abqhh")

[node name="Dummy" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0.5, 0)
visible = false
mesh = SubResource("CapsuleMesh_nnsk1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Dummy"]
transform = Transform3D(1, 0, 0, 0, -0.21480349, -0.9766573, 0, 0.9766573, -0.21480349, 0, 0.2535115, -0.28034616)
mesh = SubResource("CapsuleMesh_rwgxs")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CapsuleShape3D_nnsk1")

[node name="InteractiveArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 4
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractiveArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0)
shape = SubResource("CylinderShape3D_abqhh")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="InteractiveArea" to="." method="_on_interactive_area_body_entered"]
[connection signal="body_exited" from="InteractiveArea" to="." method="_on_interactive_area_body_exited"]
